jlamontSC-test/src/objects/Summit_Circle_Snapshot__c.object
<CustomObject>
    <description>Captures Summit Circle preferences on Accounts and Contacts with related lookup fields.</description>
    <fields>
        <fullName>Account_External_ID__c</fullName>
        <label>Account External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Text version of the Account Id</description>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Summit Circle Snapshots</relationshipLabel>
        <relationshipName>Summit_Circle_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preference Active?</description>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Preference Category</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activity/Interest Preference</fullName>
                </value>
                <value>
                    <fullName>Appeals</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Board/Trustee</fullName>
                </value>
                <value>
                    <fullName>Classification</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Contact Preference</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Interests</fullName>
                </value>
                <value>
                    <fullName>Other Future Preference</fullName>
                </value>
                <value>
                    <fullName>Ratings</fullName>
                </value>
                <value>
                    <fullName>Volunteers</fullName>
                </value>
                <value>
                    <fullName>Email Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_External_ID__c</fullName>
        <label>Contact External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <label>Contact Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>Text value of the Contact Id</description>
        <label>Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Summit Circle Snapshots</relationshipLabel>
        <relationshipName>Summit_Circle_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preference_ID__c</fullName>
        <description>The text value of the referenced Preference</description>
        <label>Preference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_Record_Type__c</fullName>
        <label>Preference Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preference</label>
        <referenceTo>rC_Bios__Preference__c</referenceTo>
        <relationshipLabel>Summit Circle Snapshots</relationshipLabel>
        <relationshipName>Summit_Circle_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summit Circle Disqualified</fullName>
                </value>
                <value>
                    <fullName>Summit Circle Member</fullName>
                </value>
                <value>
                    <fullName>Summit Circle Member Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Summit Circle No Email</fullName>
                </value>
                <value>
                    <fullName>Summit Circle Prospect</fullName>
                </value>
                <value>
                    <fullName>Summit Circle Solicited by GO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Donation_Amount__c</fullName>
        <label>Total Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Donation_Count__c</fullName>
        <label>Total Donation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Donations_2013__c</fullName>
        <label>Total Donations 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Donations_2014__c</fullName>
        <label>Total Donations 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Donations_2015__c</fullName>
        <label>Total Donations 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Summit Circle Snapshot</label>
    <nameField>
        <displayFormat>SCS{000000000}</displayFormat>
        <label>Summit Circle Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summit Circle Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>